--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,18 @@ android {
 }
 
 dependencies {
+
+    ext {
+        lifecycle_version = "2.0.0-beta01"
+        dagger_version = "2.23.2"
+        retrofit_version = "2.6.0"
+        recyclerview_version = "1.1.0-beta01"
+        rxjava_version = "2.1.15"
+        rxandroid_version = "2.0.2"
+        gson_version = "2.8.5"
+    }
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -32,4 +44,48 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
+
+    //Recyclerview
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.cardview:cardview:1.0.0"
+
+
+    //Dagger 2
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+
+    //life cycle version
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+//    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+
+    //Rx-Java
+    implementation "io.reactivex.rxjava2:rxjava:2.1.15"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    //logging-interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
+    //Gson
+    implementation "com.google.code.gson:gson:$gson_version"
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    
+    //Rx-Java
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
+
+
 }
