Adds group by album id & internet failed check

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,6 @@ dependencies {
     //Paging
     implementation 'androidx.paging:paging-runtime:2.0.0-beta01'
 
-
+    // Timber for logging
+    implementation 'com.jakewharton.timber:timber:4.6.1'
 }
