--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
         rxjava_version = "2.1.15"
         rxandroid_version = "2.0.2"
         gson_version = "2.8.5"
+        okhttp_verson = "4.0.1"
     }
 
 
@@ -80,7 +85,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.15"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
     //logging-interceptor
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_verson"
 
     //Gson
     implementation "com.google.code.gson:gson:$gson_version"
